deploy/manual/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'm3ntorshipcom-fullstack-test'
  namespace: 'default'
  labels:
    project: 'm3ntorshipcom'
    environment: 'test'
    componenet: 'fullstack'
    application: 'm3ntorshipcom-fullstack-test'
    version: '0.5'
spec:
  replicas: 1
  selector:
    matchLabels:
      application: 'm3ntorshipcom-fullstack-test'
  template:
    metadata:
      labels:
        project: 'm3ntorshipcom'
        environment: 'test'
        componenet: 'fullstack'
        application: 'm3ntorshipcom-fullstack-test'
    spec:
      containers:
        - name: 'm3ntorshipcom-fullstack-test-backend'
          image: 'm3ntorshipci/m3ntorshipcom-backend:0.5'
          imagePullPolicy: IfNotPresent
          ports:
            - name: web-backend
              containerPort: 1337
              protocol: TCP
        - name: 'm3ntorshipcom-fullstack-test-frontend'
          image: 'm3ntorshipci/m3ntorshipcom-frontend:0.5'
          imagePullPolicy: IfNotPresent
          ports:
            - name: web-frontend
              containerPort: 3000
              protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'm3ntorshipcom-fullstack-test'
  namespace: 'default'
  labels:
    project: m3ntorshipcom
    environment: test
    componenet: fullstack
    application: 'm3ntorshipcom-fullstack-test'
    version: '0.5'
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
    - host: 'm3ntorshipcom-fullstack-test.m3ntorship.net'
      http:
        paths:
          - backend:
              serviceName: 'm3ntorshipcom-fullstack-test'
              servicePort: 80
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: 'm3ntorshipcom-fullstack-test'
  namespace: 'default'
  labels:
    project: 'm3ntorshipcom'
    environment: 'test'
    componenet: 'fullstack'
    application: 'm3ntorshipcom-fullstack-test'
    version: '0.5'
spec:
  selector:
    application: 'm3ntorshipcom-fullstack-test'
  ports:
    - protocol: TCP
      name: web-frontend
      port: 80
      targetPort: 3000
    - protocol: TCP
      name: web-backend
      port: 81
      targetPort: 1337
